﻿			wxFormBuilder ChangeLog
************************************************************************
date Version 3.00.43 (Beta 3)
^ Updated to wxFlatNotebook 2.2 - building with wx2.6.x is no longer supported.
* Fixed FS#190 - "annoying warning with wxTR_HIDE_ROOT in wxTreeCtrl"
+ Implemented FS#185 - "Allowing access to wxStdDialogButtonSizer buttons."

05-21-2007 Version 3.00.42 (Beta 3)
+ Added Right-Click -> "Close Preview" to XRC Previews.
  Also much improved the effect of the ESC key in GTK.
+ Added wxRichTextCtrl

05-11-2007 Version 3.00.41 (Beta 3)
* Fixed FS#176 - "Dialog/Frame preview always displays all close/minimize/maximize buttons"
   Could probably still use some tweaking for the proper behavior in GTK.
* Fixed FS#179 - "OnPaint for wxPanel"
   Moved the OnPaint and OnBackgroundErase events to the common events.
* Fixed the wildly inefficient code for choosing the platform's EOL character.
   Significantly improves code generation (to file) time for larger projects.
  
05-04-2007 Version 3.00.40 (Beta 3)
+ Implemented FS#53 - "Copy/Paste between instances of wxFB"
  See "Copy Object To Clipboard" and "Paste Object from Clipboard" in the "Edit" menu.
  Note: You can copy an object from wxFB and paste it as xml wherever you can paste text.
+ Implemented FS#129 - "Controling control alignment from the keyboard."
+ Implemented FS#135 - "Disabling the delete (Ctrl+D) option in the project's popup menu."
^ Replaced all code using TiXml classes with ticpp classes.
  WARNING: Although this has been tested, it could cause unforseen bugs. Please report all strangeness.

04-30-2007 Version 3.00.39 (Beta 3)
+ Implemented FS#110 - "Drag & dropping objects in the Object Tree window."
  Holding CTRL down will copy the object instead of moving it.
+ Implemented FS#10 - "add support for sizers as member variables"
* Fixed code generation for wxChoice, wxRadioBox, and wxCheckListBox for
  when the "choices" property is empty.

04-18-2007 Version 3.00.38 (Beta 3)